// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchWeatherTransformer should transform a list of search weather result to weather 1`] = `
Array [
  Object {
    "city": Object {
      "coord": Object {
        "lat": 51.5085,
        "lon": -0.1258,
      },
      "country": "GB",
      "id": 2643743,
      "name": "London",
    },
    "cnt": 1,
    "list": Array [
      Object {
        "clouds": Object {
          "all": 90,
        },
        "dt": 1560233226,
        "dt_txt": "2019-06-11 06:07:06",
        "main": Object {
          "grnd_level": 2,
          "humidity": 87,
          "pressure": 1010,
          "sea_level": 1,
          "temp": 284.31,
          "temp_kf": 3,
          "temp_max": 285.93,
          "temp_min": 283.15,
        },
        "weather": Array [
          Object {
            "description": "light rain",
            "icon": "10d",
            "id": 500,
            "main": "Rain",
          },
          Object {
            "description": "mist",
            "icon": "50d",
            "id": 701,
            "main": "Mist",
          },
        ],
        "wind": Object {
          "deg": 150,
          "speed": 1.5,
        },
      },
    ],
  },
  Object {
    "city": Object {
      "coord": Object {
        "lat": 51.5085,
        "lon": -0.1258,
      },
      "country": "GB",
      "id": 1111,
      "name": "London",
    },
    "cnt": 1,
    "list": Array [
      Object {
        "clouds": Object {
          "all": 90,
        },
        "dt": 1560233226,
        "dt_txt": "2019-06-11 06:07:06",
        "main": Object {
          "grnd_level": 2,
          "humidity": 87,
          "pressure": 1010,
          "sea_level": 1,
          "temp": 284.31,
          "temp_kf": 3,
          "temp_max": 285.93,
          "temp_min": 283.15,
        },
        "weather": Array [
          Object {
            "description": "light rain",
            "icon": "10d",
            "id": 500,
            "main": "Rain",
          },
          Object {
            "description": "mist",
            "icon": "50d",
            "id": 701,
            "main": "Mist",
          },
        ],
        "wind": Object {
          "deg": 150,
          "speed": 1.5,
        },
      },
    ],
  },
]
`;

exports[`searchWeatherTransformer should transform a search weather result to weather 1`] = `
Object {
  "city": Object {
    "coord": Object {
      "lat": 51.5085,
      "lon": -0.1258,
    },
    "country": "GB",
    "id": 2643743,
    "name": "London",
  },
  "cnt": 1,
  "list": Array [
    Object {
      "clouds": Object {
        "all": 90,
      },
      "dt": 1560233226,
      "dt_txt": "2019-06-11 06:07:06",
      "main": Object {
        "grnd_level": 2,
        "humidity": 87,
        "pressure": 1010,
        "sea_level": 1,
        "temp": 284.31,
        "temp_kf": 3,
        "temp_max": 285.93,
        "temp_min": 283.15,
      },
      "weather": Array [
        Object {
          "description": "light rain",
          "icon": "10d",
          "id": 500,
          "main": "Rain",
        },
        Object {
          "description": "mist",
          "icon": "50d",
          "id": 701,
          "main": "Mist",
        },
      ],
      "wind": Object {
        "deg": 150,
        "speed": 1.5,
      },
    },
  ],
}
`;
